--- a/sqlalchemy/blogly/requirements.txt
+++ b/sqlalchemy/blogly/requirements.txt
@@ -5,6 +5,7 @@ decorator==5.0.9
 Flask==1.0.2
 Flask-DebugToolbar==0.10.1
 Flask-SQLAlchemy==2.5.1
+greenlet==1.1.0
 ipython==7.24.1
 ipython-genutils==0.2.0
 itsdangerous==1.1.0
@@ -15,12 +16,11 @@ matplotlib-inline==0.1.2
 parso==0.8.2
 pexpect==4.8.0
 pickleshare==0.7.5
-pkg-resources==0.0.0
 prompt-toolkit==3.0.19
 psycopg2-binary==2.9.1
 ptyprocess==0.7.0
 Pygments==2.9.0
-SQLAlchemy<1.4
+SQLAlchemy==1.3.24
 traitlets==5.0.5
 wcwidth==0.2.5
 Werkzeug==0.14.1
