--- a/redux/redux-microblog/frontend/package.json
+++ b/redux/redux-microblog/frontend/package.json
@@ -6,10 +6,16 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "axios": "*",
+    "bootstrap": "*",
+    "react": "*",
+    "react-dom": "*",
+    "react-redux": "*",
+    "react-router-dom": "*",
+    "react-scripts": "*",
+    "redux": "*",
+    "redux-devtools-extension": "*",
+    "redux-thunk": "*"
   },
   "scripts": {
     "start": "react-scripts start",
