--- a/redux/redux-microblog/frontend/package.json
+++ b/redux/redux-microblog/frontend/package.json
@@ -7,7 +7,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "*",
-    "bootstrap": "*",
+    "bootstrap": "4.5",
     "react": "*",
     "react-dom": "*",
     "react-redux": "*",
